<resources>
    <string name="app_name">PetTrackingPlatform</string>
    <string name="title_home">地圖</string>
    <string name="title_dashboard">資料設定</string>
    <string name="title_notifications">notifications</string>
    <string name="username_hint">帳號</string>
    <string name="password_hint">密碼</string>
    <string name="login_btn">登入</string>
    <string name="pet_tracking_platform">寵物追蹤平台</string>
    <string name="thumb">thumb</string>
    <string name="pet_list_title">我的寵物</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_pet">新增寵物</string>
    <string name="newPet">新增我的寵物</string>
    <string name="confirm">確認</string>
    <string name="cancel">取消</string>
    <string name="gender">性別\n</string>
    <string name="male">公</string>
    <string name="female">母</string>
    <string name="record">醫療紀錄</string>
    <string name="newRecord">新增紀錄</string>
    <string name="newRecordTitle">新增醫療紀錄</string>
    <string name="cost">花費金額</string>
</resources>